--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fahelmoreira/React-Native-ViewPager.git"
+    "url": "git+https://github.com/fahelmoreira/React-Native-ViewPager.git",
   },
   "dependencies": {
     "@react-native-community/viewpager": "^2.0.0",
