--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fahelmoreira/React-Native-ViewPager.git",
+    "url": "git+https://github.com/zbtang/React-Native-ViewPager.git"
   },
   "keywords": [
     "react-native-component",
